<resources>
    <string name="app_name">ShapeIt!</string>
    <string name="new_game">New Game</string>
    <string name="Continue">Continue</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="quit">Quit</string>
    <string name="name">Name:</string>
    <string name="must_be_3_letters">Name:MUST BE 3 LETTERS</string>
    <string name="main_menu">Main Menu</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="_7">7.</string>
    <string name="_8">8.</string>
    <string name="_9">9.</string>
    <string name="_10">10.</string>
    <string name="your_score_was">Your Score was:</string>
    <string name="pause">Pause</string>
    <string name="level">Level</string>
    <string name="submit">SUBMIT</string>
    <string name="i_lost">I LOST :(</string>
    <string name="StartGame">Start!</string>
</resources>