<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:screenOrientation="portrait"
    tools:ignore="LockedOrientationActivity">

    <Button
        android:id="@+id/NewGameStartUp"
        android:layout_width="338dp"
        android:layout_height="145dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:text="@string/new_game"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ContinueStartUp"
        android:layout_width="338dp"
        android:layout_height="145dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#000000"
        android:text="@string/Continue"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/LeaderboardStartUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewGameStartUp" />

    <Button
        android:id="@+id/LeaderboardStartUp"
        android:layout_width="338dp"
        android:layout_height="145dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#000000"
        android:text="@string/leaderboard"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/QuitStartUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/QuitStartUp"
        android:layout_width="338dp"
        android:layout_height="145dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#000000"
        android:text="@string/quit"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>