<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level"
    android:screenOrientation="portrait"
    tools:ignore="LockedOrientationActivity">


    <Button
        android:id="@+id/PauseLevel"
        android:layout_width="109dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:text="@string/pause"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LevelLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/level"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LifeTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/LifeThree"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LifeTwo"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/LifeTwo"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@+id/LifeThree"
        app:layout_constraintTop_toTopOf="@+id/LifeOne"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/LifeOne"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintEnd_toStartOf="@+id/LifeTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="28dp"
        android:text="@string/StartGame"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shape1"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/purple_500"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shape2"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/shape3"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shape4"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/shape5"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shape6"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape8"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/shape7"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape9"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/shape8"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/shape10"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/shape9"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="126dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shape10"
        android:layout_width="137dp"
        android:layout_height="85dp"
        android:layout_marginBottom="126dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>